fixed blog content showing up on small screens

--- a/src/app/static/styles/components/blog.css
+++ b/src/app/static/styles/components/blog.css
@@ -23,7 +23,7 @@
 
 .contentInTransition
 {
-    left: -100%;
+    left: -125%;
     transition: left 0.65s easeOutCubic 0s;
 }
 
